--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,13 @@ Source: gfxboot
 Section: utils
 Priority: optional
 Maintainer: Stefan Lippers-Hollmann <s.l-h@gmx.de>
-Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 5.0.0), patchutils (>= 0.2.25), libx11-dev, nasm, xmlto
+Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 5.0.0), patchutils (>= 0.2.25), x-dev, libx11-dev, nasm, xmlto
 Standards-Version: 3.6.2
 
 Package: gfxboot
-Architecture: any
+Architecture: amd64 i386
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: grub-gfxboot
-Suggests: kanotix-graphics | kanotix64-graphics | kanotixbh-graphics
 Description: bootlogo creator for gfxboot compliant boot loaders
  This package is needed to create the graphical boot logos for gfxboot, 
  introduced and developed by SuSE, it is suitable for grub, lilo and syslinux.
