gfxboot (3.2.23-1) unstable; urgency=low
  * New upstream release:
    - translations updated
    - fine-tuned splash
    - fixed Khmer menu entry
    - fixed evil memory corruption bug
    - added 'share' input field for smb install
    - some more texts are translatable
    - Live-CD preparations
    - adjusted 640x480 fallback layout
    - added driver update dialog that lets you enter the update file name
    - better 'welcome' screen
    - added new 'welcome' screen
    - translations updated
    - added NLD & SLES themes
  * last release for monolithic X.org.
  * bump compat level to 5.
  * move to dpatch.
  * split out SuSE themes.

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Package: gfxboot
 Architecture: amd64 i386
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: grub-gfxboot
+Suggests: gfxboot-theme-suse | gfxboot-theme-sles | gfxboot-theme-nld
 Description: bootlogo creator for gfxboot compliant boot loaders
  This package is needed to create the graphical boot logos for gfxboot, 
  introduced and developed by SuSE, it is suitable for grub, lilo and syslinux.
