gfxboot (3.3.18-1) unstable; urgency=low
  * New upstream release.
  * ABI incompatbile to gfxboot 3.2!
  * 01_x11libs.dpatch is no longer needed.
  * adapt patches.
  * add libfreetype6-dev to build dependencies, it isn't pulled in implicitly
    any longer.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun,  3 Dec 2006 15:13:31 +0100

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: gfxboot
 Section: utils
 Priority: optional
 Maintainer: Stefan Lippers-Hollmann <s.l-h@gmx.de>
-Build-Depends: cdbs, debhelper (>= 5), patchutils, dpatch, x-dev, libx11-dev, nasm, xmlto
+Build-Depends: cdbs, debhelper (>= 5), patchutils, dpatch, x-dev, libx11-dev, libfreetype6-dev, nasm, xmlto
 Standards-Version: 3.7.2
 
 Package: gfxboot
