--- a/debian/rules
+++ b/debian/rules
@@ -10,4 +10,5 @@ PACKAGE_NAME := gfxboot
 DEB_MAKE_CLEAN_TARGET	:= clean
 DEB_MAKE_BUILD_TARGET	:= all
 DEB_MAKE_INSTALL_TARGET := install DESTDIR=$(CURDIR)/debian/$(PACKAGE_NAME)/
+DEB_COMPRESS_EXCLUDE := .pdf
 
